[project]
name = "filecluster"
version = "0.1.0"
description = "Image and video clustering by date"
authors = [
    { name = "Krystian Safjan", email = "ksafjan@gmail.com" },
]
dependencies = [
    "ExifRead==3.0.0",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "Pillow==10.1.0",
    "python-dateutil==2.8.2",
    "pytz==2020.5",
    "tqdm==4.66.1",
    "pydantic==2.5.1",
    "pysimplegui==4.60.5",
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.0.10",
    "pdoc3==0.10.0",
    "pytest==7.4.3",
    "pytest-icdiff==0.8",
    "jupyter==1.0.0",
    "dataenforce==0.1.2",
    "MonkeyType==23.3.0",
    "pytest-monkeytype==1.1.0",
    "pytest-mypy==0.10.3",
    "pip-upgrader==1.4.15",
    "mypy",
    "data-science-types",
    "flake8",
    "flake8-docstrings>=1.6.0",
    "flake8-pytest-style",
    "flake8-black",
    "pandas-stubs==2.1.1.230928",
    "pre-commit>=3.6.0",
    "black>=24.4.2",
    "isort>=5.13.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"

[tool.isort]
profile = "black"
