[project]
name = "filecluster"
version = "0.1.0"
description = "Image and video clustering by date"
authors = [
    { name = "Krystian Safjan", email = "ksafjan@gmail.com" },
]
dependencies = [
    "ExifRead>=3.0.0",
    "numpy>=1.26.2",
    "pandas>=2.1.3",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "pytz>=2020.5",
    "tqdm>=4.66.1",
    "pydantic>=2.5.1",
    "pysimplegui>=4.60.5",
    "loguru>=0.7.2",
    "pydantic-settings>=2.9.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyterlab>=4.0.10",
    "pdoc3>=0.11.6",
    "pytest>=7.4.3",
    "pytest-icdiff>=0.8",
    "jupyter>=1.0.0",
    "MonkeyType>=23.3.0",
    "pytest-monkeytype>=1.1.0",
    "pip-upgrader>=1.4.15",
    "ty",
    "pre-commit>=3.6.0",
    "code2flow>=2.5.1",
    "ruff>=0.11.6",
]

[tool.ruff]
exclude = [
    ".tox",
    ".git",
    "docs",
    "venv",
    ".venv",
    "*.pyc",
    "__pycache__",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D104",
    "D105",
    "D107",
    "F405",
    "N802",
    "E501",
]
select = [
    "C4",
    "C9",
    "N",
    "E",
    "W",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
    "RUF",
    "PIE",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/filecluster/image_grouper.py" = ["C901"]
"**/tests/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "E501",
]

"**/*.ipynb" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "E501",
]

"**/notebooks/*" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "E501",
]

[tool.ty.src]
exclude = [
    "src/filecluster/gui.py",
    "src/filecluster/gui_tkinter.py",
]

